--- a/views/partials/svgs.ejs
+++ b/views/partials/svgs.ejs
@@ -1,11 +1,13 @@
 <!--clear-day, clear-night, rain, snow, sleet, wind, fog, cloudy, partly-cloudy-day, or partly-cloudy-night-->
 
+<!-- view boxes accurated scaled thanks to JS Fiddle: https://jsfiddle.net/knLbjc9a/447/ -->
+
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" style="display: none;">
 <defs>
 
     <!-- Climacon library: cloud.svg -->
-    <symbol id="cloudy" viewBox="0 0 100 100">
+    <symbol id="cloudy" viewBox="27.946998596191406 33.64299774169922 43.99500274658203 31.996002197265625">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M43.945,65.639c-8.835,0-15.998-7.162-15.998-15.998
         	c0-8.836,7.163-15.998,15.998-15.998c6.004,0,11.229,3.312,13.965,8.203c0.664-0.113,1.338-0.205,2.033-0.205
         	c6.627,0,11.999,5.373,11.999,12c0,6.625-5.372,11.998-11.999,11.998C57.168,65.639,47.143,65.639,43.945,65.639z M59.943,61.639
@@ -14,7 +16,7 @@
     </symbol>
     
     <!-- Climacon library: cloud-sun.svg -->
-    <symbol id="partly-cloudy-day" viewBox="0 0 100 100">
+    <symbol id="partly-cloudy-day" viewBox="27.947998046875 17.64499855041504 53.993003845214844 47.99400329589844">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M79.941,43.641h-4c-1.104,0-2-0.895-2-2c0-1.104,0.896-1.998,2-1.998h4
     	c1.104,0,2,0.895,2,1.998C81.941,42.746,81.045,43.641,79.941,43.641z M72.084,30.329c-0.781,0.781-2.047,0.781-2.828,0
     	c-0.781-0.78-0.781-2.047,0-2.827l2.828-2.828c0.781-0.781,2.047-0.781,2.828,0c0.781,0.78,0.781,2.047,0,2.828L72.084,30.329z
@@ -32,7 +34,7 @@
     </symbol>
     
     <!-- Climacon library: cloud-moon.svg -->
-    <symbol id="partly-cloudy-night" viewBox="0 0 100 100">
+    <symbol id="partly-cloudy-night" viewBox="27.947998046875 26.64299774169922 44.99400329589844 38.996002197265625">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M69.763,46.758L69.763,46.758c1.368,1.949,2.179,4.318,2.179,6.883
     	c0,6.625-5.371,11.998-11.998,11.998c-2.775,0-12.801,0-15.998,0c-8.836,0-15.998-7.162-15.998-15.998s7.162-15.998,15.998-15.998
     	c2.002,0,3.914,0.375,5.68,1.047l0,0c1.635-4.682,6.078-8.047,11.318-8.047c0.755,0,1.491,0.078,2.207,0.212
@@ -46,7 +48,7 @@
     </symbol>
 
     <!-- Climacon library: sun.svg -->
-    <symbol id="clear-day" viewBox="0 0 100 100">
+    <symbol id="clear-day" viewBox="26.00299835205078 26.00299835205078 47.99400329589844 47.99400329589844">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M71.997,51.999h-3.998c-1.105,0-2-0.895-2-1.999s0.895-2,2-2h3.998
     	c1.105,0,2,0.896,2,2S73.103,51.999,71.997,51.999z M64.142,38.688c-0.781,0.781-2.049,0.781-2.828,0
     	c-0.781-0.781-0.781-2.047,0-2.828l2.828-2.828c0.779-0.781,2.047-0.781,2.828,0c0.779,0.781,0.779,2.047,0,2.828L64.142,38.688z
@@ -63,7 +65,7 @@
     </symbol>
 
     <!-- Climacon: moon.svg -->
-    <symbol id="clear-night" viewBox="0 0 100 100">
+    <symbol id="clear-night" viewBox="38.000999450683594 38.000999450683594 23.996997833251953 23.99700164794922">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M50,61.998c-6.627,0-11.999-5.372-11.999-11.998
     	c0-6.627,5.372-11.999,11.999-11.999c0.755,0,1.491,0.078,2.207,0.212c-0.132,0.576-0.208,1.173-0.208,1.788
     	c0,4.418,3.582,7.999,8,7.999c0.615,0,1.212-0.076,1.788-0.208c0.133,0.717,0.211,1.452,0.211,2.208
@@ -72,7 +74,7 @@
     </symbol>
     
     <!-- Climacon library: cloud-rain.svg -->
-    <symbol id="rain" viewBox="0 0 100 100">
+    <symbol id="rain" viewBox="27.946998596191406 33.64299774169922 43.99500274658203 43.996002197265625">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M63.943,64.941v-4.381c2.389-1.383,4-3.961,4-6.92c0-4.417-3.582-7.999-8-7.999
     	c-1.6,0-3.082,0.48-4.333,1.291c-1.231-5.317-5.974-9.29-11.665-9.29c-6.626,0-11.998,5.372-11.998,11.998
     	c0,3.55,1.551,6.728,4,8.925v4.916c-4.777-2.768-8-7.922-8-13.841c0-8.835,7.163-15.997,15.998-15.997
@@ -84,7 +86,7 @@
     </symbol>
 
     <!-- Climacon library: cloud-snow.svg -->    
-    <symbol id="snow" viewBox="0 0 100 100">
+    <symbol id="snow" viewBox="28.00299835205078 33.64299774169922 43.99500274658203 39.996002197265625">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M63.999,64.943v-4.381c2.389-1.385,3.999-3.963,3.999-6.922
     	c0-4.416-3.581-7.998-7.999-7.998c-1.6,0-3.083,0.48-4.333,1.291c-1.231-5.317-5.974-9.291-11.665-9.291
     	c-6.627,0-11.998,5.373-11.998,12c0,3.549,1.55,6.729,4,8.924v4.916c-4.777-2.768-8-7.922-8-13.84
@@ -99,7 +101,7 @@
     </symbol>
 
     <!-- Climacon library: cloud-snow.svg -->    
-    <symbol id="sleet" viewBox="0 0 100 100">
+    <symbol id="sleet" viewBox="28.00299835205078 33.64299774169922 43.99500274658203 39.996002197265625">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M63.999,64.943v-4.381c2.389-1.385,3.999-3.963,3.999-6.922
     	c0-4.416-3.581-7.998-7.999-7.998c-1.6,0-3.083,0.48-4.333,1.291c-1.231-5.317-5.974-9.291-11.665-9.291
     	c-6.627,0-11.998,5.373-11.998,12c0,3.549,1.55,6.729,4,8.924v4.916c-4.777-2.768-8-7.922-8-13.84
@@ -114,7 +116,7 @@
     </symbol>
     
     <!-- Climacon library: wind.svg -->
-    <symbol id="wind" viewBox="0 0 100 100">
+    <symbol id="wind" viewBox="28.00299835205078 36.00199890136719 43.99400329589844 27.998001098632812">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M65.999,52L65.999,52h-3c-1.105,0-2-0.895-2-1.999s0.895-2,2-2h3
     	c1.104,0,2-0.896,2-1.999c0-1.105-0.896-2-2-2c-1.105,0-2-0.896-2-2s0.895-2,2-2c0.137,0,0.271,0.014,0.402,0.041
     	c3.121,0.211,5.596,2.783,5.596,5.959C71.997,49.314,69.312,52,65.999,52z M55.999,48.001h-2h-6.998H34.002
@@ -126,7 +128,7 @@
     </symbol>
     
     <!-- Climacon library: cloud-fog.svg -->
-    <symbol id="fog" viewBox="0 0 100 100">
+    <symbol id="fog" viewBox="28.00299835205078 33.64400100708008 43.99500274658203 39.994998931884766">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M69.998,65.641H30.003c-1.104,0-2-0.896-2-2c0-1.105,0.896-2,2-2h39.995
     	c1.104,0,2,0.895,2,2C71.998,64.744,71.103,65.641,69.998,65.641z M69.998,57.641H30.003c-1.104,0-2-0.895-2-2c0-1.104,0.896-2,2-2
     	h39.995c1.104,0,2,0.896,2,2C71.998,56.746,71.103,57.641,69.998,57.641z M59.999,45.643c-1.601,0-3.083,0.48-4.333,1.291
