--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,5 +3,22 @@
     $('body').scrollspy({target: '#river-menu'});
 </script>
 
+<style>
+    footer{
+        background-color: #f8f8f8;
+    border-color: #e7e7e7;
+    }
+</style>
+
+<footer>
+<nav class="navbar navbar-default" style="margin-bottom:0">
+        <div class="container-fluid" style="text-align: center;">
+            <h6>Developed by Dan Scott | 
+            <a href="https://www.github.com/DanScott2150">GitHub</a> 
+            <a href="https://www.linkedin.com/in/dan-scott-132bb930/">LinkedIn</a> 
+            <a href="https://www.instagram.com/agentdanno">Instagram</a></h6>
+        </div>    
+    </nav>
+</footer>
 </body>
 </html>
