Started on adding basic River Map Marker functionality for rivers/show route

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,10 +12,10 @@
 
 <footer>
 <nav class="navbar navbar-default" style="margin-bottom:0">
-        <div class="container-fluid" style="text-align: center;">
-            <h6>Developed by Dan Scott | 
-            <a href="https://www.github.com/DanScott2150">GitHub</a> 
-            <a href="https://www.linkedin.com/in/dan-scott-132bb930/">LinkedIn</a> 
+        <div class="container-fluid" style="text-align: center; margin:10px 0px;">
+            <h6>Developed by Dan Scott 2019</h6> 
+            <a href="https://www.github.com/DanScott2150">GitHub</a>  |
+            <a href="https://www.linkedin.com/in/dan-scott-132bb930/">LinkedIn</a> |
             <a href="https://www.instagram.com/agentdanno">Instagram</a></h6>
         </div>    
     </nav>
