--- a/views/rivers/show.ejs
+++ b/views/rivers/show.ejs
@@ -182,13 +182,38 @@ USGS Data Location:
                 <div id='map' style='width: 100%; height: 500px;'></div>
                 
                 <script>
-                    //pass river lat/lng from server-side to client-side
+                                    //pass river lat/lng from server-side to client-side
                     //is there a better way to do this?
                     var mapCenter = [<%=river.lng%>, <%=river.lat%>];
                 </script>
+
     
                 <!-- MapBox API -->
                 <script type="text/javascript" src="../js/mapbox-show.js"></script>
+                
+                
+                <script>
+
+
+                    <% river.mapMarkers.forEach(function(marker){ %>
+                    
+                        let type = "<%= marker.type %>";
+                        let title = "<%= marker.title %>";
+                        let text = "<%= marker.text %>";
+                    
+                        let popup = new mapboxgl.Popup().setHTML(`
+                            <h1>Type: ${type}</h1>
+                            <strong>Title: ${title}</strong>
+                            <p>${text}</p>`);
+
+                        let newMarker = new mapboxgl.Marker()
+                            .setLngLat(mapCenter)
+                            .setPopup(popup)
+                            .addTo(map);
+
+                    <% }); %>
+                </script>
+                
                 
                 <!-- Notes to myself/plan for the future -->
                 <div class="thumbnail">
